--- a/springboot_web_tlias_management/src/main/resources/application.properties
+++ b/springboot_web_tlias_management/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mybatis
 spring.datasource.username=root
-spring.datasource.password=Tian18922078980
-
-#??mybatis?????????????
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
-#??mybatis?????????
-mybatis.configuration.map-underscore-to-camel-case=true
-
+spring.datasource.password: Tian18922078980
+spring.servlet.multipart.max-file-size= 10MB
+spring.servlet.multipart.max-request-size=100MB
+mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis.configuration.map-underscore-to-camel-case: true
+#  pagehelper:
+#    helperDialect: mysql
+#    reasonable: true
+#    support-methods-arguments: true
+#    params: count=countSql
