完成至通过上传Excel表批量添加书籍功能，还有扫码添加书籍，借书，还书等

--- a/booksManager/src/main/resources/application.properties
+++ b/booksManager/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=Tian18922078980
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis.configuration.map-underscore-to-camel-case: true
+
+spring.servlet.multipart.max-file-size= 10MB
+spring.servlet.multipart.max-request-size=100MB
+
+isbn.api.key=ae1718d4587744b0b79f940fbef69e77
