完成扫描上传书，上传Excel并解析，自动补全信息的功能

--- a/booksManager/src/main/resources/application.properties
+++ b/booksManager/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.servlet.multipart.max-file-size= 10MB
 spring.servlet.multipart.max-request-size=100MB
 
 isbn.api.key=ae1718d4587744b0b79f940fbef69e77
+
+spring.web.resources.add-mappings=true
+spring.mvc.static-path-pattern=/resources/**
+spring.web.resources.static-locations=classpath:/image/
